--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <body>
     <section>
-        <h1 id="title">LIGHTS</h1>
+        <h1 id="title">SMART LIGHTS</h1>
 
         <div class="buttons-wrapper">
             <button id="offBtn">UGASI SVJETLA</button>
             <button id="onBtn">UPALI SVJETLA</button>
         </div>
         
-        <img id="microphone" src="media/mic.png" alt="">
+        <img id="microphone" src="media/mic.png">
+        <div id="voiceCommand">Ovdje ce se prikazati ono sto izgovorite, za paljenje svjetala samo recite ON a za gasenje OFF</div>
         <video id="video" src="media/default.mp4" autoplay muted></video>
     </section>
 
