--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         
         <img id="microphone" src="media/mic.png">
-        <div id="voiceCommand">Ovdje ce se prikazati ono sto izgovorite, za paljenje svjetala samo recite ON a za gasenje OFF</div>
+        <div id="voiceCommand">Kliknite na mikrofon za glasovne naredbe. Ovdje ce se prikazati ono sto izgovorite, za paljenje svjetala samo recite ON a za gasenje OFF</div>
         <video id="video" src="media/default.mp4" autoplay muted></video>
     </section>
 
