--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <button id="offBtn">UGASI SVJETLA</button>
             <button id="onBtn">UPALI SVJETLA</button>
         </div>
+        <table>
+            <thead>
+                <th>Vrijeme</th>
+                <th>Komanda</th>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
         
         <img id="microphone" src="media/mic.png">
         <div id="voiceCommand">Kliknite na mikrofon za glasovne naredbe. Ovdje ce se prikazati ono sto izgovorite, za paljenje svjetala samo recite ON a za gasenje OFF</div>
